add pagination to tags and text_search endpoints
